--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.3",
+    "tailwind": "^4.0.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
@@ -29,14 +30,17 @@
     "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.5.3",
     "eslint": "^9.31.0",
     "eslint-plugin-cypress": "^5.1.0",
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "start-server-and-test": "^2.0.12",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vitest": "^3.2.4"
