--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "pinia": "^3.0.3",
     "tailwind": "^4.0.0",
+    "typed.js": "^2.1.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-typed-js": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
